@@ -35,7 +35,6 @@ public class Controller {
                 username = request.split("\\$")[1];
                 password = request.split("\\$")[2];
                 if(!Database.getInstance().isUsernameAvailable(username)){
-                    System.out.println(Database.getInstance().getUsersDataMap());
                     res = "404";
                 }else if(!Database.getInstance().doesUsernameMatchPassword(username, password)){
                     res = "409";
@@ -43,7 +42,13 @@ public class Controller {
                     res = "200";
                 }
                 break;
-                
+            case "POST: userInfo":
+                username = request.split("\\$")[1];
+                res = Database.getInstance().getUserInfo(username);
+                System.out.println("-------------------the res is:"+res);
+                break;
+
+
         }
         return res;
     }
