@@ -1,1 +1,5 @@
-id>random,,teacher>harry,,students>{4022~19},,assignments>{id},,active>true,,best>4022
+courseId>1111&1,,teacher>foroutan,,students>{4022~19.42//4023~20.22},,assignments>{1111&1&1},,done>false,,best>4022,,credit>3
+courseId>1111&2,,teacher>foroutan,,students>{4022~18.5//4023~12},,assignments>{1111&2&1},,done>false,,best>4022,,credit>2
+courseId>1111&3,,teacher>foroutan,,students>{4022~20//4023~20},,assignments>{1111&3&1},,done>false,,best>4022,,credit>1
+courseId>3333&1,,teacher>itsme,,students>{4022~19.5},,assignments>{3333&1&1},,done>false,,best>4022,,credit>3
+courseId>3333&2,,teacher>itsme,,students>{4022~18.12},,assignments>{3333&2&1},,done>false,,best>4022,,credit>2
