@@ -1,1 +1,3 @@
-id>4022&1,,courses>{id~score}
+termId>4022&1,,courses>{3333&1//3333&2}
+termId>4022&2,,courses>{1111&1//1111&2//1111&3}
+termId>4023&1,,courses>{1111&1//1111&2//1111&3}
