@@ -1,0 +1,5 @@
+class Task{
+  Task({required this.title,required this.done});
+  late String title;
+  late bool done;
+}
